...
private fun UserProfileContentPreview() {
    P15_eventorias_jrTheme {
        UserProfileContent(
            uiState = UserProfileMutableState(
                profile = UserProfileUiState(
                    uid = "user_001",
                    firstName = "Jacqueline",
                    lastName = "Dupont",
                    email = "jacqueline.dupont@example.com",
                    avatarUrl = "",   // vide en preview, Coil ne charge pas d'URL
                    notificationEnabled = true
                )
            ),
...
